<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp">

    <Button
        android:id="@+id/createPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/create" />

    <Button
        android:id="@+id/SendPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/SendPdf"/>

    <Button
        android:id="@+id/showPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/showPdf"/>

    <Button
        android:id="@+id/openFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/openExistedFiles"/>
    <Button
        android:id="@+id/editFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/openEditFile"/>
    <Button
        android:id="@+id/proposal_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="PressBtbActivity"
        android:text="@string/beforeWork"/>

</LinearLayout>