<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="המלצות:"
                android:textSize="24dp"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waterSystem"
                android:textSize="18dp"
                android:layout_gravity="end"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/waterSystem"
                android:maxLines="5"
                android:minLines="1"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sealingSystem"
                android:textSize="18dp"
                android:layout_gravity="end"
                />
            <EditText
                android:id="@+id/SealingSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLines="5"
                android:minLines="1"
                 />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sewageSystem"
                android:textSize="18dp"
                android:layout_gravity="end"
                />
            <EditText
                android:id="@+id/SewageSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLines="5"
                android:minLines="1" />
            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommendationsForMaking"
                android:textSize="18dp"
                android:layout_gravity="end"
              />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RecommendationsForMaking"
                android:maxLines="5"
                android:minLines="1"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="PressButtonActivity"
                android:text="@string/create"/>
        </LinearLayout>

    </ScrollView>




</LinearLayout>