<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autoMirrored="true"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/pdfFileNameAutoComplete1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fileName"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="78dp"
            android:onClick="getJsonFile"
            android:text="@string/editFile" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="38dp"
            android:onClick="getPdfFilePath"
            android:text="@string/openFile" />

    </LinearLayout>

</LinearLayout>