<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autoMirrored="true"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/costumerName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costumerName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/workers"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workersName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/propertyDescription"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1" />


        <TextView
            android:id="@+id/textView115"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propertyDescription"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/reasonCall"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1" />

        <TextView
            android:id="@+id/textView1131"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="סיבת קריאה"
            android:textSize="20sp" />
    </LinearLayout>
    <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contractor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:paddingTop="20dp"
        android:text="@string/contractor" />
    <Button
        android:id="@+id/addPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView115"
        android:layout_marginVertical="20dp"
        android:onClick="PressActivity"
        android:text="@string/addPhoto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoMirrored="true"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerInput"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView221"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ערוך ממצא:"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNumberOfImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:onClick="showDatePickerDialog"
        android:text="שנה תאריך " />


    <Button
        android:id="@+id/continueRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:onClick="PressActivity"
        android:text="המשך למסקנות והמלצות" />

</LinearLayout>